--- a/App/Webcam Trigger App.ui
+++ b/App/Webcam Trigger App.ui
@@ -16,7 +16,7 @@
   <widget class="QToolButton" name="btn_trigger">
    <property name="geometry">
     <rect>
-     <x>20</x>
+     <x>10</x>
      <y>10</y>
      <width>131</width>
      <height>61</height>
@@ -27,7 +27,7 @@
 font: 19pt &quot;Segoe UI&quot;;
 border-width: 1px;
 border: 2px solid #000000;
-border-radius: 0px;
+border-radius: 5px;
 </string>
    </property>
    <property name="text">
@@ -37,10 +37,10 @@ border-radius: 0px;
   <widget class="QLabel" name="lb_title">
    <property name="geometry">
     <rect>
-     <x>320</x>
-     <y>10</y>
+     <x>310</x>
+     <y>20</y>
      <width>211</width>
-     <height>61</height>
+     <height>31</height>
     </rect>
    </property>
    <property name="font">
@@ -70,6 +70,10 @@ border-radius: 0px;
      <width>781</width>
      <height>511</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">border: 2px solid blue;
+border-radius: 5px;</string>
    </property>
    <property name="text">
     <string/>
